--- a/WpfMarathon/Pages/AdminEditUser.xaml
+++ b/WpfMarathon/Pages/AdminEditUser.xaml
@@ -25,7 +25,7 @@
         <!-- Верхняя панель с заголовком -->
         <DockPanel LastChildFill="False" Grid.Row="10">
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Background="#333333" Margin="0,0,0,10" Width="1919">
-                <Button Content="Назад" Width="150" Height="55" FontSize="36" Margin="50,0,0,0" />
+                <Button Content="Назад" Width="150" Height="55" FontSize="36" Margin="50,0,0,0"  Click="Back_btn_Click" />
                 <TextBlock Text="MARATHON SKILLS 2025" Foreground="White" FontSize="56" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="160,20,0,20"/>
                 <Button Content="Logout" Width="198" Height="55" FontSize="36" Margin="650,0,0,0" />
             </StackPanel>
@@ -35,9 +35,9 @@
         <TextBlock Grid.Row="10" Margin="630,162,0,831"
                    TextWrapping="Wrap" Text="Редактирование пользователя"
                    FontSize="44" Foreground="#FF6C6C6C" HorizontalAlignment="Left" Width="624"/>
-        <TextBlock Grid.Row="10" Margin="1387,326,0,716"
+        <TextBlock Grid.Row="10" Margin="1387,298,0,716"
             Text="Смена пароля" FontFamily="Open Sans Light" FontSize="36"
-            HorizontalAlignment="Left" Width="253"/>
+            HorizontalAlignment="Left" Width="272"/>
         <TextBlock Grid.Row="10" Margin="1212,374,0,592"
             Text="Оставьте эти поля незаполненными, если вы не хотите менять пароль"
             FontSize="36" Foreground="#FF999999" Width="606" TextWrapping="Wrap"
