--- a/WpfMarathon/Pages/BMIcalculator.xaml
+++ b/WpfMarathon/Pages/BMIcalculator.xaml
@@ -37,7 +37,7 @@
         <!-- Верхняя панель с заголовком -->
         <DockPanel LastChildFill="False" Grid.ColumnSpan="10" Grid.RowSpan="3" Height="132" VerticalAlignment="Top">
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Background="#333333" Margin="0,0,0,10">
-                <Button Content="Назад" Width="150" Height="55" FontSize="36" Margin="50,0,0,0">
+                <Button Content="Назад" Width="150" Height="55" FontSize="36" Margin="50,0,0,0"  Click="Back_btn_Click" >
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="15"/>
