--- a/WpfMarathon/Pages/BMRcalculator.xaml
+++ b/WpfMarathon/Pages/BMRcalculator.xaml
@@ -12,7 +12,7 @@
         <!-- Верхняя панель с заголовком -->
         <DockPanel LastChildFill="False"  Height="132" VerticalAlignment="Center" HorizontalAlignment="Left" Width="1920">
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Background="#333333" Margin="0,0,0,10">
-                <Button Content="Назад" Width="150" Height="55" FontSize="36" Margin="50,0,0,0">
+                <Button Content="Назад" Width="150" Height="55" FontSize="36" Margin="50,0,0,0"  Click="Back_btn_Click" >
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="15"/>
