--- a/WpfMarathon/Pages/EditProfile.xaml
+++ b/WpfMarathon/Pages/EditProfile.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="WpfMarathon.Pages.RegBegunPage"
+﻿<Page x:Class="WpfMarathon.Pages.EditProfile"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,9 @@
       xmlns:local="clr-namespace:WpfMarathon.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="1080" d:DesignWidth="1920"
-      Title="RegBegunPage">
+      Title="EditProfile">
+
+
     <Grid Background="White">
         <!-- Верхняя панель с заголовком -->
         <DockPanel LastChildFill="False">
@@ -45,28 +47,28 @@
 
             <!-- Текстовые метки -->
             <TextBlock HorizontalAlignment="Right" Grid.Row="3" TextWrapping="Wrap" Text="Email:" VerticalAlignment="Top" Height="38" Margin="0,14,251,0" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="75"/>
-            <TextBlock HorizontalAlignment="Right" Grid.Row="4" TextWrapping="Wrap" Text="Пароль:" VerticalAlignment="Top" Height="36" Margin="0,5,245,0" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="113"/>
-            <TextBlock HorizontalAlignment="Left" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" FontFamily="Open Sans Light" FontSize="27" Width="258" Margin="120,69,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2"><Run Text="Повторите пароль"/><Run Text=":"/></TextBlock>
+            <TextBlock HorizontalAlignment="Left" Grid.Row="6" TextWrapping="Wrap" Text="Пароль:" VerticalAlignment="Top" Height="36" Margin="383,73,0,0" Grid.Column="2" FontFamily="Open Sans Light" FontSize="27" Width="113" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
+            <TextBlock HorizontalAlignment="Left" Grid.Row="7" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" FontFamily="Open Sans Light" FontSize="27" Width="258" Margin="234,47,0,0" Grid.Column="2" Grid.ColumnSpan="2"><Run Text="Повторите пароль"/><Run Text=":"/></TextBlock>
             <TextBlock HorizontalAlignment="Right" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Top" Height="36" Margin="0,80,245,0" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="75" Grid.RowSpan="2"><Run Text="Имя"/><Run Text=":"/></TextBlock>
             <TextBlock HorizontalAlignment="Left" Grid.Row="6" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Margin="252,74,0,0" Grid.Column="0" FontFamily="Open Sans Light" FontSize="27" Width="127" Grid.ColumnSpan="2" Grid.RowSpan="2"><Run Text="Фамилия"/><Run Text=":"/></TextBlock>
             <TextBlock HorizontalAlignment="Right" Grid.Row="7" TextWrapping="Wrap" VerticalAlignment="Top" Height="36" Margin="0,68,251,0" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="60"><Run Text="Пол"/><Run Text=":"/></TextBlock>
 
             <!-- Поля ввода -->
-            <TextBox Name="txb_email" Grid.Column="1" Height="46" Grid.Row="3" TextWrapping="Wrap" GotFocus="txb_email_GotFocus" Text="Email" VerticalAlignment="Top" Margin="135,14,329,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" Grid.ColumnSpan="2"/>
-            <TextBox Name="txb_pass" Grid.Column="1" Height="44" Grid.Row="4" TextWrapping="Wrap" GotFocus="txb_pass_GotFocus" Text="Пароль" VerticalAlignment="Top" Margin="135,5,383,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" Grid.ColumnSpan="2" />
-            <TextBox Name="txb_repeatpass" Grid.Column="1" Height="46" Grid.Row="4" TextWrapping="Wrap" GotFocus="txb_repeatpass_GotFocus" Text="Повторите пароль" VerticalAlignment="Top" Margin="135,76,383,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
+            <TextBlock Name="txt_email" Grid.Column="1" Height="46" Grid.Row="3" TextWrapping="Wrap" Text="the.email@address.com" VerticalAlignment="Top" Margin="135,14,329,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" Grid.ColumnSpan="2"/>
+            <PasswordBox Name="txb_pass" Grid.Column="3" Height="44" Grid.Row="6"  GotFocus="txb_pass_GotFocus" VerticalAlignment="Top" Margin="64,73,-58,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" Grid.ColumnSpan="2" Grid.RowSpan="2" />
+            <PasswordBox Name="txb_repeatpass" Grid.Column="3" Height="46" Grid.Row="7" GotFocus="txb_repeatpass_GotFocus"  VerticalAlignment="Top" Margin="64,53,-58,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" Grid.ColumnSpan="2"/>
             <TextBox Name="txb_name" Grid.Column="1" Height="44" Grid.Row="5" TextWrapping="Wrap" GotFocus="txb_name_GotFocus" Text="Имя" VerticalAlignment="Top" Margin="135,80,383,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
             <TextBox Name="txb_surname" Grid.Column="1" Height="46" Grid.Row="6" TextWrapping="Wrap" GotFocus="txb_surname_GotFocus" Text="Фамилия" VerticalAlignment="Top" Margin="135,74,383,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
             <ComboBox Name="cmb_gender" Grid.Column="1" Margin="135,68,443,0" Grid.Row="7" VerticalAlignment="Top" FontFamily="Open Sans Light" FontSize="27" Height="44" Grid.ColumnSpan="2"/>
 
             <!-- Фото -->
-            <TextBlock HorizontalAlignment="Left" Margin="246,55,0,0" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Grid.Column="2" Text="Фото файл:" Width="150" FontFamily="Open Sans Light" FontSize="27" Grid.RowSpan="2"/>
-            <Rectangle Grid.Column="4" Fill="#FFEAEAEA" HorizontalAlignment="Left" Height="180" Grid.Row="2" Grid.RowSpan="4" Stroke="Black" VerticalAlignment="Bottom" Width="165" Margin="68,0,0,78"/>
-            <TextBlock Grid.Column="4" Margin="99,56,30,55" Grid.Row="3" TextWrapping="Wrap" Text="Фото" FontFamily="Open Sans Light" FontSize="27" TextAlignment="Center" Grid.RowSpan="2"/>
-            <TextBox x:Name="txb_pathphoto" Grid.Column="2" Height="44" Grid.Row="6" TextWrapping="Wrap" GotFocus="txb_pathphoto_GotFocus" Text="Photo_logo.png" VerticalAlignment="Top" Margin="221,14,0,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" HorizontalAlignment="Left" Width="375" Grid.ColumnSpan="3"/>
-            <Image Name="imgAvatar" Grid.Column="4" HorizontalAlignment="Left" Height="180" Margin="68,0,0,78" Grid.Row="2" Grid.RowSpan="4" VerticalAlignment="Bottom" Width="165"/>
+            <TextBlock HorizontalAlignment="Left" Margin="246,13,0,0" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Grid.Column="2" Text="Фото файл:" Width="150" FontFamily="Open Sans Light" FontSize="27"/>
+            <Rectangle Grid.Column="4" Fill="#FFEAEAEA" HorizontalAlignment="Left" Height="180" Grid.Row="1" Grid.RowSpan="4" Stroke="Black" VerticalAlignment="Bottom" Width="165" Margin="62,0,0,72"/>
+            <TextBlock Grid.Column="4" Margin="99,48,30,57" Grid.Row="2" TextWrapping="Wrap" Text="Фото" FontFamily="Open Sans Light" FontSize="27" TextAlignment="Center" Grid.RowSpan="2"/>
+            <TextBox x:Name="txb_pathphoto" Grid.Column="2" Height="44" Grid.Row="4" TextWrapping="Wrap" GotFocus="txb_pathphoto_GotFocus" Text="Photo_logo.png" VerticalAlignment="Top" Margin="221,56,0,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" HorizontalAlignment="Left" Width="375" Grid.ColumnSpan="3" Grid.RowSpan="2"/>
+            <Image Name="imgAvatar" Grid.Column="4" HorizontalAlignment="Left" Height="180" Margin="62,0,0,73" Grid.Row="1" Grid.RowSpan="4" VerticalAlignment="Bottom" Width="165"/>
 
-            <Button Name="btn_source" Content="Просмотр..." Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="180" Height="44" VerticalAlignment="Bottom" Grid.Column="4" Grid.Row="6" Click="btn_source_Click" Margin="0,0,-66,36">
+            <Button Name="btn_source" Content="Просмотр..." Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="180" Height="44" VerticalAlignment="Bottom" Grid.Column="4" Grid.Row="4" Click="btn_source_Click" Margin="0,0,-66,66" Grid.RowSpan="2">
                 <Button.Resources>
                     <Style TargetType="{x:Type Border}">
                         <Setter Property="CornerRadius" Value="15"/>
@@ -75,49 +77,49 @@
             </Button>
 
             <!-- Дата рождения -->
-            <Grid Grid.Column="2" Margin="135,62,-120,177" Grid.Row="6" Grid.ColumnSpan="3" Grid.RowSpan="2">
+            <Grid Margin="11,0,331,76" Grid.Row="4" Grid.ColumnSpan="3" Grid.RowSpan="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition Width="225"/>
                     <ColumnDefinition Width="375"/>
                 </Grid.ColumnDefinitions>
                 <DatePicker Name="dateBirth" Margin="0,0,15,0" VerticalAlignment="Top" Grid.Column="2" FontFamily="Open Sans Light" FontSize="27" HorizontalAlignment="Right" Width="330"/>
-                <TextBlock HorizontalAlignment="Right" Margin="0,4,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Width="215" FontFamily="Open Sans Light" FontSize="27" Grid.Column="1"><Run Text="Дата рождения"/><Run Text=":"/></TextBlock>
+                <TextBlock HorizontalAlignment="Right" Margin="0,4,351,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Width="215" FontFamily="Open Sans Light" FontSize="27" Grid.Column="1" Grid.ColumnSpan="2"><Run Text="Дата рождения"/><Run Text=":"/></TextBlock>
             </Grid>
 
             <!-- Страна -->
-            <Grid Grid.Column="2" Margin="135,60,-120,97" Grid.Row="7" Grid.ColumnSpan="3">
+            <Grid Margin="11,10,331,86" Grid.Row="5" Grid.ColumnSpan="3" Grid.RowSpan="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition Width="150"/>
                     <ColumnDefinition Width="375"/>
                 </Grid.ColumnDefinitions>
                 <ComboBox Name="cmbCountry" Grid.Column="2" Margin="0,4.5,15,0" VerticalAlignment="Top" Height="45" FontFamily="Open Sans Light" FontSize="27" HorizontalAlignment="Right" Width="330"/>
-                <TextBlock HorizontalAlignment="Right" Margin="0,4.5,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="37.5" Width="112.5" FontFamily="Open Sans Light" FontSize="27" Grid.Column="1"><Run Text="Страна"/><Run Text=":"/></TextBlock>
+                <TextBlock HorizontalAlignment="Right" Margin="0,4,351,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Width="112" FontFamily="Open Sans Light" FontSize="27" Grid.Column="1" Grid.ColumnSpan="2"><Run Text="Страна"/><Run Text=":"/></TextBlock>
             </Grid>
 
             <!-- Заголовок формы -->
             <Grid Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Margin="240,150,-240,42" Grid.RowSpan="3">
-                <TextBlock Text="Регистрация бегуна" FontSize="42" Foreground="#FF6C6C6C" HorizontalAlignment="Center" Margin="0,0,0,80"/>
-                <TextBlock Text="Пожалуйста заполните всю информацию, чтобы зарегистрироваться в качестве бегуна" 
-                           FontSize="27" Foreground="#FF6C6C6C" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,99,0,0" Height="51"/>
+                <TextBlock FontSize="42" Foreground="#FF6C6C6C" HorizontalAlignment="Center" Margin="0,0,0,80" Width="498"><Run Text="Редактирование"/><Run Text=" бегуна"/></TextBlock>
             </Grid>
 
             <!-- Кнопки -->
-            <Button x:Name="btn_Reg" Content="Регистрация" Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="180" Height="44" VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="7" Margin="0,0,6,22" Click="btn_Reg_Click">
+            <Button x:Name="btn_save" Content="Сохранить" Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="212" Height="44" VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="7" Margin="0,0,221,32" Click="btn_save_Click">
                 <Button.Resources>
                     <Style TargetType="{x:Type Border}">
                         <Setter Property="CornerRadius" Value="15"/>
                     </Style>
                 </Button.Resources>
             </Button>
-            <Button x:Name="btn_cancel" Content="Отмена" Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="180" Height="44" VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="7" Margin="0,0,216,22">
+            <Button x:Name="btn_cancel" Content="Отмена" Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="180" Height="44" VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="7" Margin="0,0,55,32" Grid.ColumnSpan="2" Click="btn_cancel_Click">
                 <Button.Resources>
                     <Style TargetType="{x:Type Border}">
                         <Setter Property="CornerRadius" Value="15"/>
                     </Style>
                 </Button.Resources>
             </Button>
+            <TextBlock HorizontalAlignment="Left" Margin="18,37,0,0" TextWrapping="Wrap" Text="Смена пароля" VerticalAlignment="Top" FontSize="27" Foreground="#FF6C6C6C" Height="40" Grid.Column="3" Grid.Row="5" Width="182" Grid.ColumnSpan="2"/>
+            <TextBlock HorizontalAlignment="Left" Grid.Row="5" TextWrapping="Wrap" Text="Оставьте эти поля, незаполненными, если вы не хотите изменять пароль." VerticalAlignment="Top" Height="61" Margin="313,83,0,0" Grid.Column="2" FontFamily="Open Sans Light" Width="432" Foreground="#FF999999" FontStyle="Italic" TextAlignment="Center" Grid.ColumnSpan="3" Grid.RowSpan="2" FontSize="24"/>
         </Grid>
     </Grid>
 </Page>
