--- a/WpfMarathon/Pages/EditCharity.xaml
+++ b/WpfMarathon/Pages/EditCharity.xaml
@@ -42,7 +42,7 @@
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Background="#333333" Margin="0,0,0,10" Width="1919">
                 <Button Content="Назад" Width="150" Height="55" FontSize="36" Margin="50,0,0,0"  Click="Back_btn_Click" />
                 <TextBlock Text="MARATHON SKILLS 2025" Foreground="White" FontSize="56" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="160,20,0,20"/>
-                <Button Content="Logout" Width="198" Height="55" FontSize="36" Margin="650,0,0,0" />
+                <Button Content="Logout" Width="198" Height="55" FontSize="36" Margin="650,0,0,0" Click="Logout_Click"  />
             </StackPanel>
         </DockPanel>
         <TextBlock Grid.Row="7" TextWrapping="Wrap" Text="Наименование:" Margin="419,25,34,15" FontFamily="Open Sans Light" FontSize="36" RenderTransformOrigin="0.339,0.522" Grid.ColumnSpan="4"/>
