--- a/WpfMarathon/Pages/ThanksPay.xaml
+++ b/WpfMarathon/Pages/ThanksPay.xaml
@@ -14,7 +14,7 @@
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Background="#333333" Margin="0,0,0,10">
                 <Button x:Name="Back_btn" Content="Назад" Width="150" Height="55" FontSize="36" Margin="50,0,0,0" Click="Back_btn_Click" />
                 <TextBlock Text="MARATHON SKILLS 2025" Foreground="White" FontSize="56" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="160,20,0,20"/>
-                <Button Content="Logout" Width="198" Height="55" FontSize="36" Margin="650,0,0,0"/>
+                <Button Content="Logout" Width="198" Height="55" FontSize="36" Margin="650,0,0,0"  Click="Logout_Click" />
             </StackPanel>
         </DockPanel>
 
@@ -101,7 +101,7 @@
                     VerticalAlignment="Top" 
                     Grid.Row="5"
                     Margin="809,74,0,0"
-                    Click="btn_cancel_Click" Width="252">
+                    Click="Back_btn_Click" Width="252">
                 <Button.Resources>
                     <Style TargetType="{x:Type Border}">
                         <Setter Property="CornerRadius" Value="21"/>
